fixed vertical spacing on menu-page on mobile? Fixed navigation from finalizeorder when you place an order.

--- a/client/src/components/PopularProductCarousel/popularProductCarousel.css
+++ b/client/src/components/PopularProductCarousel/popularProductCarousel.css
@@ -55,6 +55,13 @@
 
 @media screen and (max-width: 630px) {
     .PopularProductCarousel {
+        margin-bottom: var(--spacing-xl);
+    }
+}
+
+
+@media screen and (max-width: 630px) {
+    .PopularProductCarousel {
         min-height: 350px;
     }
 
